--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--Links
         -->
         <link rel="icon" type="image/x-icon" href="images/icon.ico">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
     </head>
     <body>
