--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h5>Engineering student</h5>
                         <h4><a class="hidden" target="_blank" href="https://centrale-casablanca.ma/">Ecole Centrale Casablanca</a></h5>
                         <h5><a class="hidden" target="_blank" href="https://www.linkedin.com/in/rayane-yajjou-b02a9a285/">LinkedIn</a></h5>
-                        <h5><a class="hidden" target="_blank" href="docs/CVPDF.pdf">CV</a></h5>
+                        <h5><a class="hidden" target="_blank" href="docs/CV.pdf">CV</a></h5>
                     </div>
                     <div class="five columns" style="width: 37;float: right;margin-top: 2%;">
                         <img class="hs" src="images/me.png" alt="headshot" width="200">
