--- a/cvfr.html
+++ b/cvfr.html
@@ -17,47 +17,47 @@
                 </h4>
             </div>
             <div>
-                <h2>Education</h2>
+                <h2>Éducation</h2>
                 <hr>
                 <table style="width: 100%;">
                     <tr>
                         <td style="width: 70%;">
-                            <h3>Ecole Centrale Casablanca</h3>
-                            Bachelor of Science, Mathematics, Physics, Computer Science
+                            <h3>École Centrale Casablanca</h3>
+                            Diplôme ingénieur généraliste, mathématiques, sciences physiques, science informatiques
                         </td>
-                        <td>September 2023 - Present<br>Bouskoura</td>
+                        <td>septembre 2023 - aujourd'hui<br>Bouskoura</td>
                     </tr>
                     <tr>
                         <td style="width: 70%;">
                             <h3>Lycée Moulay Youssef</h3>
-                            Classes préparatoires MPSI/MP, Mathematics, Physics, Computer Science
+                            Classes préparatoires MPSI/MP, mathématiques, sciences physiques, science informatiques
                         </td>
-                        <td>September 2021 - June 2023<br>Rabat</td>
+                        <td>septembre 2021 - juin 2023<br>Rabat</td>
                     </tr>
                 </table>
             </div>
             <br>
             <div>
-                <h2>Skills</h2>
+                <h2>Compétences</h2>
                 <hr>
                 <ul style="line-height: 150%;">
-                    <li><b>Languages: </b>English, Arabic (Native), French (Professional working proficiency)</li>
-                    <li><b>Programming: </b>Proficient: Python, Lua, HTML, CSS, JavaScript | Prior experience: C, C++, C#, Java</li>
-                    <li><b>Web Development</b></li>
-                    <li><b>Game Development</b></li>
+                    <li><b>Langues: </b>Anglais (Bilingue), Arabe (Langue natale) French (Compétence professionnelle)</li>
+                    <li><b>Programmation: </b>Efficace: Python, Lua, HTML, CSS, JavaScript | Compétent: C, C++, C#, Java</li>
+                    <li><b>Développement web</b></li>
+                    <li><b>Développement des jeux vidéo</b></li>
                 </ul>
             </div>
             <br>
             <div>
                 <h2>Outside activities</h2>
                 <hr>
-                <p>Participated in several competitive coding contests including: </p>
+                <p>Participation à plusieurs compétitions de programmation, notamment: </p>
                 <ul>
-                    <li>ITHOLIC organized by ENSIAS online, in April 2022</li>
-                    <li>JNJD organized by INPT, Rabat, in May 2022</li>
-                    <li>Game of Codes organized by INSEA, Rabat, in May 2022</li>
-                    <li>CODE IT organized by EHTP, Casablanca, in June 2022</li>
-                    <li>MNPC 2022 organized by 1337, Khouribga, in October 2022</li>
+                    <li>ITHOLIC organizé par l'ENSIAS en ligne, en avril 2022</li>
+                    <li>JNJD organized par l'INPT à Rabat en mai 2022</li>
+                    <li>Game of Codes organizé par l'INSEA à Rabat en mai 2022</li>
+                    <li>CODE IT organized par l'EHTP à Casablanca en juin 2022</li>
+                    <li>MNPC 2022 organized par 1337 à Khouribga en octobre 2022</li>
                 </ul>
             </div>
         </div>
