--- a/cvfr.html
+++ b/cvfr.html
@@ -9,7 +9,7 @@
             <div style="text-align: center;">
                 <h1>Rayane Yajjou</h1>
                 <h4 style="line-height: 120%;">
-                    Ecole Centrale Casablanca, Ville Verte Côté Latéral Est à la forêt Boukoura, Bouskoura
+                    École Centrale Casablanca, Ville Verte Côté Latéral Est à la forêt Boukoura, Bouskoura
                     <br>
                     rayane.yajjou@centrale-casablanca.ma
                     <br>
@@ -23,16 +23,16 @@
                     <tr>
                         <td style="width: 70%;">
                             <h3>École Centrale Casablanca</h3>
-                            Diplôme ingénieur généraliste, mathématiques, sciences physiques, science informatiques
+                            Diplôme ingénieur généraliste, mathématiques, sciences physiques, sciences informatiques
                         </td>
-                        <td>septembre 2023 - aujourd'hui<br>Bouskoura</td>
+                        <td>septembre 2023 à ce jour<br>Bouskoura</td>
                     </tr>
                     <tr>
                         <td style="width: 70%;">
                             <h3>Lycée Moulay Youssef</h3>
-                            Classes préparatoires MPSI/MP, mathématiques, sciences physiques, science informatiques
+                            Classes préparatoires MPSI/MP, mathématiques, sciences physiques, sciences informatiques
                         </td>
-                        <td>septembre 2021 - juin 2023<br>Rabat</td>
+                        <td>septembre 2021 à juin 2023<br>Rabat</td>
                     </tr>
                 </table>
             </div>
@@ -41,7 +41,7 @@
                 <h2>Compétences</h2>
                 <hr>
                 <ul style="line-height: 150%;">
-                    <li><b>Langues: </b>Anglais (Bilingue), Arabe (Langue natale) French (Compétence professionnelle)</li>
+                    <li><b>Langues: </b>Anglais (Bilingue), Arabe (Langue natale) Français (Compétences professionnelles)</li>
                     <li><b>Programmation: </b>Efficace: Python, Lua, HTML, CSS, JavaScript | Compétent: C, C++, C#, Java</li>
                     <li><b>Développement web</b></li>
                     <li><b>Développement des jeux vidéo</b></li>
@@ -49,15 +49,15 @@
             </div>
             <br>
             <div>
-                <h2>Outside activities</h2>
+                <h2>Activités extra-scolaires</h2>
                 <hr>
                 <p>Participation à plusieurs compétitions de programmation, notamment: </p>
                 <ul>
-                    <li>ITHOLIC organizé par l'ENSIAS en ligne, en avril 2022</li>
-                    <li>JNJD organized par l'INPT à Rabat en mai 2022</li>
-                    <li>Game of Codes organizé par l'INSEA à Rabat en mai 2022</li>
-                    <li>CODE IT organized par l'EHTP à Casablanca en juin 2022</li>
-                    <li>MNPC 2022 organized par 1337 à Khouribga en octobre 2022</li>
+                    <li>ITHOLIC organisé par l'ENSIAS en ligne, en avril 2022</li>
+                    <li>JNJD organisé par l'INPT à Rabat en mai 2022</li>
+                    <li>Game of Codes organisé par l'INSEA à Rabat en mai 2022</li>
+                    <li>CODE IT organisé par l'EHTP à Casablanca en juin 2022</li>
+                    <li>MNPC 2022 organisé par 1337 à Khouribga en octobre 2022</li>
                 </ul>
             </div>
         </div>
